--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,11 +44,11 @@ h1, h2, h3, h4, h5, h6, p, span, tr, th, td, div, ul, li, input, label, textarea
 
 .bg-admin .sidebar .menuItem {
   font-size: 22px;
-  color: #837185;
+  color: #0071BD;
 }
 
 .message-item {
-  background-color: rgba(110, 15, 125, 0.1);
+  background-color: rgba(0, 113, 189, 0.24);
   width: fit-content;
   max-width: 70%;
   word-break: break-all;
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6, p, span, tr, th, td, div, ul, li, input, label, textarea
 }
 
 .bg-admin .sidebar .menuItem:hover {
-  background-color: rgba(110, 15, 125, 0.1);
+  background-color: rgba(0, 113, 189, 0.24);
   border-radius: 10px;
   cursor: pointer;
 }
@@ -122,7 +122,8 @@ h1, h2, h3, h4, h5, h6, p, span, tr, th, td, div, ul, li, input, label, textarea
 }
 
 .badge-pending {
-  background-color: #CE8696;
+  background-color: #0071BD;
+  color: white;
 }
 
 .rounded-lg {
@@ -265,12 +266,12 @@ a {
 }
 
 .link-item:hover {
-  background-color: rgba(110, 15, 125, 0.1);
+  background-color: rgba(0, 113, 189, 0.24);
   cursor: pointer;
 }
 
 .selected {
-  background-color: rgba(110, 15, 125, 0.1);
+  background-color: rgba(0, 113, 189, 0.24);
 }
 
 .notification-list {
