--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,6 +121,10 @@ h1, h2, h3, h4, h5, h6, p, span, tr, th, td, div, ul, li, input, label, textarea
   width: 70%;
 }
 
+.admin-client .modal-content {
+  padding: 0 20px;
+}
+
 .badge-pending {
   background-color: #0071BD;
   color: white;
